--- a/firstIndex.html
+++ b/firstIndex.html
@@ -28,6 +28,7 @@
             Enter price: <input type="range" name="price"><br>
             
             <input type="Submit" value="SEND">
-        </for
+                    </form>
     </body>
+
 </html>
